--- a/dva-project/src/page/login/index.css
+++ b/dva-project/src/page/login/index.css
@@ -59,6 +59,7 @@ html {
   .userlogin {
     border-bottom: 1px solid #ccc;
     padding: 0.1rem 0.3rem;
+    position: relative;
   }
   .usersign {
     border-bottom: 1px solid #ccc;
@@ -72,16 +73,16 @@ html {
   .Input input {
     outline: none;
     border: 1px solid #ccc;
-    width: 4.5rem;
+    width: 5.5rem;
     height: 0.7rem;
     padding-left: 0.1rem;
     margin-top: 0.1rem;
     padding-left: 0.3rem;
   }
   .but {
-    width: 4.85rem;
-    height: 0.7rem;
-    margin-top: .7rem;
+    width: 5.85rem;
+    height: 0.8rem;
+    margin-top:0.1rem;
     justify-content: center;
     background: blue;
     color: #fff;
@@ -89,19 +90,36 @@ html {
     border: none;
     border-radius: 5px;
     display: block;
+    cursor: pointer;
   }
   .checkbox {
-    width:4.85rem;
-    height: 0.3rem;
+    width:5.85rem;
+    height: .5rem;
     margin-top: 0.1rem;
   }
-  .action {
-    border-bottom-color: blue;
-    color: blue;
+  .moving{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left:0;
+    transition:all 0.5s;
+  }
+  .left{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left:0;
+    transition:all 1s;
+    transform: translateX(100%);
+    transition:all 0.5s;
   }
 }
 /*大屏手机*/
-@media screen and (min-width: 375px) and (max-width: 768px){
+@media screen and (min-width: 376px) and (max-width: 768px){
   .header {
     width: 100%;
     height: 1rem;
@@ -141,13 +159,15 @@ html {
     flex-direction: column;
   }
   .usertitle {
-    width: 3.5rem;
+    width: 4rem;
     display: flex;
     justify-content: center;
+    
   }
   .userlogin {
     border-bottom: 1px solid #ccc;
     padding: 0.1rem 0.3rem;
+    position: relative;
   }
   .usersign {
     border-bottom: 1px solid #ccc;
@@ -178,15 +198,31 @@ html {
     border: none;
     border-radius: 5px;
     display: block;
+    cursor: pointer;
   }
   .checkbox {
     width:4.5rem;
     height: 0.3rem;
     margin-top: 0.1rem;
   }
-  .action {
-    border-bottom-color: blue;
-    color: blue;
+  .moving{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left: 0;
+    transition:all 0.5s;
+  }
+  .left{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left:0px;
+    transform: translateX(100%);
+    transition:all 0.5s;
   }
 }
 
@@ -245,6 +281,7 @@ html {
   .userlogin {
     border-bottom: 1px solid #ccc;
     padding: 10px 30px;
+    position: relative;
     cursor: pointer;
   }
   .usersign {
@@ -273,6 +310,7 @@ html {
     border: none;
     border-radius: 5px;
     display: block;
+    cursor: pointer;
   }
   .checkbox {
     width: 285px;
@@ -280,9 +318,24 @@ html {
     padding: 0;
     margin-top: 10px;
   }
-  .action {
-    border-bottom-color: blue;
-    color: blue;
+  .moving{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left: 0;
+    transition:all 0.5s;
+  }
+  .left{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left:0;
+    transform: translateX(100%);
+    transition:all 0.5s;
   }
 }
 /*大屏幕，或者宽屏*/
@@ -341,6 +394,7 @@ html {
     border-bottom: 1px solid #ccc;
     padding: 10px 30px;
     cursor: pointer;
+    position: relative;
   }
   .usersign {
     border-bottom: 1px solid #ccc;
@@ -368,6 +422,7 @@ html {
     border: none;
     border-radius: 5px;
     display: block;
+    cursor: pointer;
   }
   .checkbox {
     width: 285px;
@@ -375,8 +430,23 @@ html {
     padding: 0;
     margin-top: 10px;
   }
-  .action {
-    border-bottom-color: blue;
-    color: blue;
+  .moving{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left:0px;
+    transition:all 0.5s;
+  }
+  .left{
+    position: absolute;
+    width: 100%;
+    height:1px;
+    background: blue;
+    bottom: -1px;
+    left:0;
+    transform: translateX(100%);
+    transition:all 0.5s;
   }
 }
