--- a/dva-project/src/page/headmaster/index.css
+++ b/dva-project/src/page/headmaster/index.css
@@ -8,27 +8,176 @@ body,
 html {
   font-size: calc(100 / 750 * 100vw);
 }
-#root{
-  font-size: 14px
+#root {
+  font-size: 14px;
+}
+.header {
+  width: 100%;
+  background-color: rgba(63, 81, 181, 1);
+  color: rgba(255, 255, 255, 1);
+  font-family: Roboto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.class {
+  background-color: #fff;
+}
+.classItem span {
+  cursor: pointer;
+}
+.masterpage{
+  background: #ccc;
+  font-size: 12px;
 }
 /*小屏幕*/
-@media screen and (max-width:375px) {
-   .masterpage{
-       width: 100%;
-       height: 100%;
-       font-size: 12px;
-   }
+@media screen and (max-width: 375px) {
+  .masterpage {
+    width: 100%;
+  }
+  .header {
+    height: 1.2rem;
+    font-size: 16px;
+  }
+ 
+  .class {
+    min-height: 2rem;
+    line-height: .3rem;
+    font-size: 14px;
+    padding:.2rem .2rem 0 .2rem;
+  }
+ .classItem{
+    min-height:1rem;
+    padding:.1rem;
+  }
+  .class ::after{
+    content: "";
+    width: 0;
+    height: 0;
+    display: block;
+    overflow: hidden;
+    _zoom:1;
+    clear: both;
+  }
+  .hine{
+     float: left;
+  }
+ .item{
+    width:82%;
+    float: left;
+  }
+   .item span {
+    display: inline-block;
+    margin-left: .4rem;
+    background-color: #e6f1fc;
+    border: 1px solid #a3d0fd;
+    padding: .1rem .2rem;
+    color: rgba(25, 137, 250, 1);
+    border-radius: 2px;
+    margin-bottom: 12px;
+  }
+  .name{
+    padding:.1rem;
+  }
+  .name span{
+    border: 0;
+    padding: 0 .3rem;
+    color:#000;
+    background: #fff;
+  } 
 }
 /*大屏手机*/
-@media screen and (min-width: 376px) and (max-width: 768px){
-
+@media screen and (min-width: 376px) and (max-width: 768px) {
 }
 
 /*平板*/
 @media screen and (min-width: 768px) and (max-width: 1200px) {
-
+  .masterpage {
+    width: 100%;
+   
+  }
+  .header {
+    height: 80px;
+    font-size: 20px;
+  }
+  .class {
+    height: 200px;
+    line-height: 30px;
+    font-size: 12px;
+    padding:30px 30px 0 30px;
+  }
+  .hine{
+    display: inline-block;
+  }
+   .classItem{
+    display: inline-block;
+   }
+ 
+  .classItem span {
+    display: inline-block;
+    margin-left: 40px;
+    background-color: #e6f1fc;
+    border: 1px solid #a3d0fd;
+    padding: 0 15px;
+    color: rgba(25, 137, 250, 1);
+    border-radius: 2px;
+    margin-bottom: 12px;
+  }
 }
 /*大屏幕，或者宽屏*/
 @media screen and (min-width: 1200px) {
-
+  .masterpage {
+    width: 100%;
+  }
+  .header {
+    height: 80px;
+    font-size: 20px;
+  }
+ 
+  .class {
+    height: 150px;
+    line-height: 30px;
+    font-size: 12px;
+    padding:30px 30px 0 30px;
+    
+  }
+ .classItem{
+    min-height:100px;
+  }
+  .class ::after{
+    content: "";
+    width: 0;
+    height: 0;
+    display: block;
+    overflow: hidden;
+    _zoom:1;
+    clear: both;
+  }
+  .hine{
+     float: left;
+  }
+  .item{
+    width:95%;
+    float: left;
+  }
+  .item span {
+    display: inline-block;
+    margin-left: 40px;
+    background-color: #e6f1fc;
+    border: 1px solid #a3d0fd;
+    padding: 0 15px;
+    color: rgba(25, 137, 250, 1);
+    border-radius: 2px;
+    margin-bottom: 12px;
+  }
+  .name{
+    padding:10px;
+  }
+  .name span{
+    border: 0;
+    padding: 0 20px;
+    color:#000;
+    background: #fff;
+     padding: 0 15px; 
+  } 
 }
