--- a/dva-project/src/components/lineChart/index.css
+++ b/dva-project/src/components/lineChart/index.css
@@ -4,3 +4,27 @@
   margin-top:20px;
   padding:30px;
 }
+.LineBox{
+  width: 100%;
+}
+.com{
+  width: 100%;
+  display: flex;
+}
+.com .times{
+  width: 120px;
+  padding:10px;
+}
+.times span{
+  display: block;
+ line-height: 20px;
+}
+.presenting{
+ width: 1200px;
+ word-break:normal;
+ white-space:pre-warp;
+ word-wrap:break-word;
+}
+.coms{
+  display:block ;
+}
