--- a/dva-project/src/components/lineChart/index.css
+++ b/dva-project/src/components/lineChart/index.css
@@ -1,30 +1,31 @@
 .cva {
   background: #fff;
   height: 400px;
-  margin-top:20px;
-  padding:30px;
+  margin-top: 20px;
+  padding: 30px;
 }
-.LineBox{
+.LineBox {
   width: 100%;
+
 }
-.com{
+.com {
   width: 100%;
   display: flex;
+  background: #fff;
+  border-top: 1px solid #ccc;
 }
-.com .times{
+.com .times {
   width: 120px;
-  padding:10px;
+  padding: 10px;
 }
-.times span{
+.times span {
   display: block;
- line-height: 20px;
+  line-height: 20px;
 }
-.presenting{
- width: 1200px;
- word-break:normal;
- white-space:pre-warp;
- word-wrap:break-word;
-}
-.coms{
-  display:block ;
+.presenting {
+  padding: 10px;
+  width: 1200px;
+  word-break: normal;
+  white-space: pre-warp;
+  word-wrap: break-word;
 }
