--- a/dva-project/src/pages/perspec/allexam/index.css
+++ b/dva-project/src/pages/perspec/allexam/index.css
@@ -164,7 +164,6 @@ html,body:globe{
     }
     .neng input{
         width: 2rem;
-
     }
     .exam{
         width:  1.5rem;
@@ -235,15 +234,15 @@ html,body:globe{
         background: #1989FA;
         color: #fff;
     }
-    .dels{
+   .del .dels{
         width: 80%;
         height: 0.5rem;
         margin-left: 0.2rem;
         display: flex;
         margin-top: 0.1rem;
-        font-size: 0.12rem;
+        font-size: 12px;
     }
-    .spd{
+    .dels .spd{
         width: 0.3rem;
         height: 0.3rem;
         background: orange;
@@ -251,10 +250,12 @@ html,body:globe{
         /* line-height: 50px; */
         text-align: center;
         line-height: 0.3rem;
+        font-size:12px;
     }
     .dels p{
         margin-left: 0.15rem;
-        font-size: 0.13rem;
+        font-size: 10px;
+        z-index:1000;
     }
     .bns{
        width: 80%;
@@ -281,7 +282,7 @@ html,body:globe{
     
 } */
 /*中等屏幕*/
- @media screen and (min-width: 700px) and (max-width: 1200px){
+@media screen and (min-width: 1200px) {
     .head{
         width: 100%;
         height: 75px;
@@ -316,11 +317,12 @@ html,body:globe{
     }
     .put{
         
-        margin-bottom: 20px;
-        position: absolute;
-        height: 24px;
+        width: 170px;
+        height: 30px;
+        
         border: 1px solid #fff;
     }
+    
     .spa{
         position: absolute;
         margin-top: -20px;
@@ -378,6 +380,7 @@ html,body:globe{
     .done{
         width: 90px;
         height: 40px;
+        display: flex;
     }
     .edit{
         width: 323px;
@@ -389,8 +392,9 @@ html,body:globe{
         text-align: center;
         font-family: Roboto;
         border: 1px solid rgba(187, 187, 187, 1);
-        margin-left: 150px;
+        margin-left: 300px;
         margin-top: 50px;
+        
     }
     .con{
         width: 100%;
@@ -438,14 +442,14 @@ html,body:globe{
         width:348px;
         height: 120px;
         border:1px solid #ccc;
-        margin-left: 150px;
+        margin-left: 300px;
         margin-top: 50px;
     }
     .other{
         width: 149px;
         height: 26px;
         border: 1px solid #ccc;
-        margin-left: 850px;
+        margin-left: 900px;
         margin-top: -465px;
     }
     select{
@@ -517,7 +521,7 @@ html,body:globe{
         background: #1989FA;
         color: #fff;
     }
-} 
+ }  
 /*大屏幕，或者宽屏*/
  @media screen and (min-width: 1200px) {
     .head{
@@ -554,11 +558,12 @@ html,body:globe{
     }
     .put{
         
-        margin-bottom: 20px;
-        position: absolute;
-        height: 24px;
+        width: 170px;
+        height: 30px;
+        
         border: 1px solid #fff;
     }
+    
     .spa{
         position: absolute;
         margin-top: -20px;
@@ -616,6 +621,7 @@ html,body:globe{
     .done{
         width: 90px;
         height: 40px;
+        display: flex;
     }
     .edit{
         width: 323px;
@@ -627,8 +633,9 @@ html,body:globe{
         text-align: center;
         font-family: Roboto;
         border: 1px solid rgba(187, 187, 187, 1);
-        margin-left: 150px;
+        margin-left: 300px;
         margin-top: 50px;
+        
     }
     .con{
         width: 100%;
@@ -676,14 +683,14 @@ html,body:globe{
         width:348px;
         height: 120px;
         border:1px solid #ccc;
-        margin-left: 150px;
+        margin-left: 300px;
         margin-top: 50px;
     }
     .other{
         width: 149px;
         height: 26px;
         border: 1px solid #ccc;
-        margin-left: 850px;
+        margin-left: 900px;
         margin-top: -465px;
     }
     select{
@@ -755,7 +762,6 @@ html,body:globe{
         background: #1989FA;
         color: #fff;
     }
-
  } 
 
 
