--- a/dva-project/src/pages/perspec/allexam/index.css
+++ b/dva-project/src/pages/perspec/allexam/index.css
@@ -277,12 +277,8 @@ html,body:globe{
     }
     
 }
-/*平板*/
-/* @media screen and (min-width: 768px) and (max-width: 992px){
-    
-} */
 /*中等屏幕*/
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 700px) and (max-width:1200px) {
     .head{
         width: 100%;
         height: 75px;
@@ -393,8 +389,7 @@ html,body:globe{
         font-family: Roboto;
         border: 1px solid rgba(187, 187, 187, 1);
         margin-left: 300px;
-        margin-top: 50px;
-        
+        margin-top: 50px;  
     }
     .con{
         width: 100%;
@@ -412,7 +407,6 @@ html,body:globe{
         display: flex;
         justify-content: space-around;
         margin: 0 auto;
-        
     }
     .neng{
         width: 300px;
@@ -420,8 +414,7 @@ html,body:globe{
         margin: 0 auto;
         display: flex;
         justify-content: space-around;
-        margin-top: 15px;
-        
+        margin-top: 15px;  
     }
     .exam{
         width:  150px;
@@ -498,7 +491,6 @@ html,body:globe{
         height: 30px;
         background: orange;
         border-radius: 50%;
-        /* line-height: 50px; */
         text-align: center;
         line-height: 30px;
     }
@@ -557,10 +549,8 @@ html,body:globe{
         justify-content: space-between;
     }
     .put{
-        
         width: 170px;
         height: 30px;
-        
         border: 1px solid #fff;
     }
     
@@ -572,7 +562,7 @@ html,body:globe{
  
     .bottom{
         width: 973px;
-        height: 282.5px;
+        height: 274px;
         margin: 0 auto;
         border: 1px solid #ccc;
         margin-top: 5px;
@@ -634,8 +624,7 @@ html,body:globe{
         font-family: Roboto;
         border: 1px solid rgba(187, 187, 187, 1);
         margin-left: 300px;
-        margin-top: 50px;
-        
+        margin-top: 50px;   
     }
     .con{
         width: 100%;
@@ -739,7 +728,6 @@ html,body:globe{
         height: 30px;
         background: orange;
         border-radius: 50%;
-        /* line-height: 50px; */
         text-align: center;
         line-height: 30px;
     }
