--- a/dva-project/src/components/lineChart/index.css
+++ b/dva-project/src/components/lineChart/index.css
@@ -1,12 +1,9 @@
-.cva {
-  background: #fff;
-  height: 400px;
-  margin-top: 20px;
-  padding: 30px;
+html{
+  font-size: calc(100/750*100vw)
 }
 .LineBox {
   width: 100%;
-
+  font-size: 14px;
 }
 .com {
   width: 100%;
@@ -14,18 +11,94 @@
   background: #fff;
   border-top: 1px solid #ccc;
 }
-.com .times {
-  width: 120px;
-  padding: 10px;
+.cva {
+  background: #fff;
 }
-.times span {
-  display: block;
-  line-height: 20px;
+@media screen and (min-width: 1200px) {
+  .cva {
+    height: 400px;
+    margin-top: 20px;
+    padding: 30px;
+  }
+  .com .times {
+    width: 150px;
+    padding: 10px
+  }
+  .times span {
+    display: block;
+    line-height: 20px;
+  }
+  .presenting {
+    padding: 10px;
+    width: 1100px;
+    word-break: normal;
+    white-space: pre-warp;
+    word-wrap: break-word;
+  }
 }
-.presenting {
-  padding: 10px;
-  width: 1200px;
-  word-break: normal;
-  white-space: pre-warp;
-  word-wrap: break-word;
+@media screen and (max-width: 375px){
+  .cva {
+    height: 4rem;
+    margin-top: .2rem;
+    padding: .3rem;
+
+  }
+  .com .times {
+    padding: .1rem;
+  }
+  .times span {
+    display: block;
+    margin-bottom: .1rem
+  }
+  .presenting {
+    padding: .1rem;
+    width: 4.7rem;
+    word-break: normal;
+    white-space: pre-warp;
+    word-wrap: break-word;
+  }
 }
+@media screen and (min-width: 376px) and (max-width: 768px){
+  .cva {
+    height: 400px;
+    margin-top: .2rem;
+    padding: .3rem;
+  }
+  .com .times {
+    padding: .1rem;
+  }
+  .times span {
+    display: block;
+    margin-bottom: .1rem
+  }
+  .presenting {
+    padding: .1rem;
+    width: 4.9rem;
+    word-break: normal;
+    white-space: pre-warp;
+    word-wrap: break-word;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px){
+  .cva {
+    height: 400px;
+    margin-top: 20px;
+    padding: 30px;
+  }
+  .com .times {
+    width: 130px;
+    padding: 10px;
+  }
+  .times span {
+    display: block;
+    line-height: 20px;
+  }
+  .presenting {
+    padding: 10px;
+    width: 580px;
+    word-break: normal;
+    white-space: pre-warp;
+    word-wrap: break-word;
+  }
+}
+
